--- a/battleplankit/src/canvas/BattleCanvas.scss
+++ b/battleplankit/src/canvas/BattleCanvas.scss
@@ -14,7 +14,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     //padding: 20px;
-    margin: 10px;
+    //margin: 10px;
     //min-height: 300px;
     width: 100%;
     //max-width: 800px;
