--- a/battleplankit/src/viewer/BattleViewer.scss
+++ b/battleplankit/src/viewer/BattleViewer.scss
@@ -30,6 +30,11 @@
         border-radius: 4px;
         cursor: grab;
     
+        div{
+          width: 100%;
+          height: 100%;
+        }
+
         &.circle {
           border-radius: 50%;
         }
