--- a/battleplankit/src/viewer/BattleViewer.scss
+++ b/battleplankit/src/viewer/BattleViewer.scss
@@ -8,7 +8,7 @@
     width:100%;
 }
 
-.shape-container {
+.shape-base-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -18,7 +18,13 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     margin: 10px;
-    max-width: 300px;
+    cursor: pointer;
+
+    .shape-base {
+      width: 50%;
+      margin-bottom: 20px;
+    }
+
     .shape {
         display: flex;
         justify-content: center;
@@ -28,6 +34,7 @@
         margin: 10px;
         border: 1px solid #ccc;
         border-radius: 4px;
+        margin:auto;
         cursor: grab;
     
         div{
