--- a/battleplankit/src/canvas/Shape.scss
+++ b/battleplankit/src/canvas/Shape.scss
@@ -1,7 +1,9 @@
-.shape {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.shape-container {
+  display: flex;
+  flex-direction: column; // change the direction of the flex container to column
+  align-items: center; // center the child elements horizontally
+
+  .shape {
     width: 50px;
     height: 50px;
     margin: 10px;
@@ -13,15 +15,15 @@
       border-radius: 50%;
     }
 
-    &.square {
-      // additional square styles if needed
-    }
-
     &.oval {
       border-radius: 50%;
       width: 80px;
       height: 50px;
       background-color: #4caf50;
     }
-    // Add other shape styles as needed
   }
+
+  .shape-size {
+    margin-top: 10px; // add some space between the shapes and the text
+  }
+}
