--- a/battleplankit/src/canvas/BattleCanvas.scss
+++ b/battleplankit/src/canvas/BattleCanvas.scss
@@ -42,6 +42,11 @@
       border-radius: 50%;
     }
 
+    div {
+      width: 100%;
+      height: 100%;
+    }
+
     // Add other shape styles as needed
   }
 }
