--- a/battleplankit/src/canvas/Shape.scss
+++ b/battleplankit/src/canvas/Shape.scss
@@ -21,6 +21,11 @@
       height: 50px;
       background-color: #4caf50;
     }
+
+    div {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .shape-size {
